Revision history for Perl module XML::RSS

     - 
       - Remove the executable bit from Makefile.PL

1.12 - October 25, 2006
       - Add more tests
       - make sure META.yml is correctly generated
       - Fix enclosure parsing (RT#7920, Tatsuhiko Miyagawa)
       - Incorrect entity encoding in XML output (RT#22467, reported by Stephen Hall)

1.11 - October 19, 2006
       - use HTML::Entities instead of the "homegrown" entity encoding code
       - Minor doc fix (David Steinbrunner)
       - Fix encoding of the > char, added tests (RT#19420, Shlomi Fish)
       - XML::RSS ignores output encoding (RT#11124, RT#7343, test
         failures on win32, Vaclav Haisman, Steve Peters)
       - encoding of source element (RT#2285)
       - use base instead of @ISA
       - Thanks to Shlomi Fish for helping sorting through the RT queue!

1.10 - March 11, 2006
       - Module (for now) maintained by Ask Bjoern Hansen
       - Fixed category output in RSS 2.0 (RT#17303, Yasuhiro Onishi)
       - Update documentation with new Subversion server and bug tracking
       - Clean up distribution (tests, Makefile.PL, file locations, ...)

1.05 - Thu Aug 12 20:54:31 2004
       - fixed version number
       - improved RSS 2.0 generation support
       - typo and documentation fixes
    
1.04 - Web Mar 03 20:49:43 2004
       - update Changes to include changes for 1.03
       
1.03 - Web Mar 03 00:24:07 2004
       - quell warnings when parsing RSS 0.9x, RSS 2.0
   
1.02 - Mon Feb 20 15:34:21 2003
       - fixed bug in encode().  encode() did not respect CDATA
         sections and would mangle them when encountered.  now behaves
         properly (we hope) even when CDATA and #PCDATA are mixed
         together liberally

1.01 - Mon Feb  3 15:46:25 2003
    * fixed bug with handle_char().  i (brian d foy) mis-diagnosed a
    previous bug and broke handle_char() when what I should have done
    was initialise the object for each call to parse*()
